--- a/layouts/partials/gadgets.html
+++ b/layouts/partials/gadgets.html
@@ -1,17 +1,30 @@
 <div class="gadgets">
-	{{ with .NextInSection }}<a id="next" href="{{ .Permalink }}"><span>→</span></a>{{ end }}
-	{{ with .PrevInSection }}<a id="prev" href="{{ .Permalink }}"><span>←</span></a>{{ end }}
-	<a id="scroller" href="#top"><span>⇈</span></a>
-	<a id="theme-toggle"><span>◑</span></a>
+	{{ with .NextInSection }}<a id="next" href="{{ .Permalink }}">→</a>{{ end }}
+	{{ with .PrevInSection }}<a id="prev" href="{{ .Permalink }}">←</a>{{ end }}
+	<a id="scroller" href="#top">⇈</a>
+	<a id="theme-toggle">◐</a>
 </div>
 <script type="text/javascript">
 	var themetoggle = document.querySelector('#theme-toggle');
-	themetoggle.style.opacity = 1;
+
+	// update icon if the theme is already dark
+	if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches || document.body.classList.contains('scheme-dark')) {
+		themetoggle.innerHTML = '◑';
+	}
+
+	// toggle light / dark scheme manually
 	themetoggle.onclick = function() {
 		if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
 			document.querySelector('body').classList.toggle('scheme-light');
 		} else {
 			document.querySelector('body').classList.toggle('scheme-dark');
+		}
+
+		// toggle the icon accordingly
+		if (this.innerHTML == '◑') {
+			this.innerHTML = '◐';
+		} else {
+			this.innerHTML = '◑';
 		}
 	}
 </script>
