--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -31,9 +31,9 @@ global CSS variables
 	/*--content-width: 100%; /* DEBUG */
 
 	--line-height: 1.4em; /* units used implicitely, but could be removed if multiplied with s00 later */
-	--gutter-height: calc(1*var(--line-height));
-	/*--gutter-width: calc(1*var(--line-height));*/
+	--gutter-height: 1.4rem;
 	--gutter-width: 1.4rem;
+	/*--gutter-width: calc(1*var(--line-height));*/
 	/*--offset: --gutter-width;*/
 	/*--gutter-width: 0px; /* DEBUG */
 
@@ -156,6 +156,7 @@ body.theme-black {
 	--hyperlink-color: 250, 250, 250;
 	--accent-color: 205, 35, 185;
 	--text-color-inverted: 20, 20, 20;
+	--theme-toggle-opacity: 0;
 }
 
 body.theme-white {
@@ -164,6 +165,7 @@ body.theme-white {
 	--hyperlink-color: 34, 34, 34;
 	--accent-color: 0, 0, 255;
 	--text-color-inverted: 200, 200, 200;
+	--theme-toggle-opacity: 0;
 }
 
 body.theme-gray,
@@ -173,6 +175,7 @@ body.theme-grey {
 	--hyperlink-color: 0, 0, 0;
 	--accent-color: 0, 0, 255;
 	--text-color-inverted: 200, 200, 200;
+	--theme-toggle-opacity: 0;
 }
 
 body.theme-blue {
@@ -181,6 +184,7 @@ body.theme-blue {
 	--hyperlink-color: 255, 255, 255;
 	--accent-color: 255, 0, 0;
 	--text-color-inverted: 0, 0, 255;
+	--theme-toggle-opacity: 0;
 }
 
 
@@ -410,7 +414,6 @@ body > footer,
 .rating,
 .sl-navigation button,
 abbr:not(:hover):before,
-abbr:not(:hover):after,
 ins[datetime]:not(:hover):before,
 del[datetime]:not(:hover):before,
 a[title*=' ']:not(:hover):before,
@@ -1559,7 +1562,7 @@ language selector
 .languages {
 	display: block;
 	z-index: 101;
-	margin-top: calc(-1*var(--gutter-height));
+	margin-top: calc(-1*var(--line-height));
 
 	line-height: var(--line-height);
 	text-align: right;
@@ -1604,21 +1607,18 @@ theme toggle, return to top
 
 .gadgets {
 	position: fixed;
-	bottom: calc(var(--gutter-height));
+	top: 0;
+	bottom: 0;
 	right: 0;
 	width: var(--gutter-width);
-	height: calc(100% - 2*var(--gutter-height));
+	height: 100%;
 	z-index: 104;
 
 
 	pointer-events: none;
 	-webkit-user-select: none !important;
 	user-select: none !important;
-	text-shadow:
-	   -0.5px -0.5px 1px rgb(var(--page-color)),  
-	    0.5px -0.5px 1px rgb(var(--page-color)),
-	   -0.5px  0.5px 1px rgb(var(--page-color)),
-	    0.5px  0.5px 1px rgb(var(--page-color));
+	text-shadow: 1px 1px 0 rgb(var(--page-color));
 
 	/*outline: 1px dashed cyan;*/
 }
@@ -1676,16 +1676,12 @@ theme toggle, return to top
 
 .gadgets #theme-toggle {
 	position: absolute;
-	bottom: 0;
-	cursor: pointer;
-	opacity: 0;
-}
+	top: var(--gutter-height);
 
-/*body[class*=theme-]:not(.theme-blend) .gadgets #theme-toggle {
-	display: none;
-	cursor: not-allowed;
-	opacity: 0.2;
-}*/
+	cursor: pointer;
+	color: rgba(var(--text-color),var(--theme-toggle-opacity,1));
+	text-shadow: 1px 1px 0 rgba(var(--page-color),var(--theme-toggle-opacity,1));
+}
 
 
 /*--------------------------------------------------------------
