--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,7 +12,7 @@
 
 <link rel="stylesheet" href="{{ "/styles/screen.css" | relURL }}" media="all">
 <!-- load non essential style sheets, see https://timkadlec.com/remembers/2020-02-13-when-css-blocks/  -->
-<link rel="stylesheet" href="{{ "/styles/syntax.css" | relURL }}" media="print" onload="this.media='screen'">>
+<link rel="stylesheet" href="{{ "/styles/syntax.css" | relURL }}" media="print" onload="this.media='screen'">
 <link rel="stylesheet" href="{{ "/scripts/simple-lightbox/simple-lightbox.min.css" | relURL }}" media="print" onload="this.media='screen'">
 
 {{ range .AlternativeOutputFormats -}}
