--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,13 +19,12 @@
 		</style>
 	{{- end }}
 	{{ if ne .Site.Params.show_gadgets false }}{{ partial "gadgets" . }}{{ end }}
-	<header class="cluster">
+	<header>
 		{{ if ne .Site.Params.show_languages false }}{{ partial "languages" . }}{{ end }}
 		<div class="inner">
 		{{ block "header" . }}{{ partial "header-inner" . }}{{end}}
 		{{ partialCached "header-nav" . }}
 		</div>
-		<!-- {{ partialCached "header-nav" . }} -->
 	</header>
 	<main>
 		{{ block "main" . }}{{end}}
