--- a/layouts/partials/header-inner.html
+++ b/layouts/partials/header-inner.html
@@ -1,10 +1,11 @@
 <h1>
 	<a href="{{ "/" | relLangURL }}">
-		{{- if .Site.Params.Logo }}
-			{{ .Site.Params.Logo | safeHTML }}
+		{{- if site.Params.Logo }}
+			{{ site.Params.Logo | safeHTML }}
 		{{- else -}}
-			{{ .Site.Title }}
+			{{ site.Title }}
 		{{- end -}}
-		{{- with .Site.Params.Description }}<span class="description">{{ . }}</span>{{ end -}}
+		<!-- {{- with site.Params.Description }}<span class="description">{{ . }}</span>{{ end -}} -->
 	</a>
 </h1>
+{{ partialCached "menu-main" . }}
