--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -369,9 +369,9 @@ body,
 
 .font-mono, .font-monospace,
 code, kbd,
-button, .button, .tag,
-.more,
-.languages, .sharing, .social {
+button, .button,
+.menu, .sharing, .languages,
+.tag, .more {
 	--xheight: 0.92;
 	font-family: monospace; /* alternative */
 	font-family: var(--font-mono);
@@ -382,12 +382,9 @@ pre, input, textarea {
 	font-family: inherit;
 }
 
-header nav,
-footer nav,
-.sharing, .social,
-.tag,
-.languages, .more,
-button, .button, .tag,
+button, .button,
+.menu, .sharing, .languages,
+.tag, .more,
 .meta details summary,
 .meta dt {
 	/*--xheight: 0.92;*/
@@ -407,8 +404,14 @@ article.ephemera > * {
 	font-size: var(--s-1);
 }
 
-body > footer {
+body > footer .author-card,
+body > footer .social {
 	font-size: var(--s-2);
+	line-height: 1.3;
+}
+
+body > footer .copyright {
+	font-size: var(--s-3);
 	line-height: 1.3;
 }
 
@@ -418,7 +421,8 @@ body > footer {
 	font-size: var(--s-2);
 }
 
-.tag::after,
+.menu > ul > li:after,
+.tag:after,
 .gadgets,
 .marginalia:before,
 .summary:after,
@@ -896,11 +900,11 @@ input[type="submit"],
 input[type="reset"],
 .button {
 	display: block;
-	margin: 0.5rem auto;
+	/*margin: 0.5rem auto;*/
 	padding: 0.6rem 0.6rem 0.5rem 0.6rem;
 
 	background: rgb(var(--page-color));
-	border: 1.5px solid rgb(var(--text-color));
+	border: 1.5px solid;
 	border-bottom: 3px solid;
 	border-radius: 2rem;
 	color: rgb(var(--text-color));
@@ -932,6 +936,7 @@ input[type="reset"]:focus,
 	border-top: 3px solid;
 	border-bottom: 1.5px solid;
 	box-shadow: inset 0 2rem 0 var(--shadow-color), 0px 3px 0px 0px var(--shadow-color);
+	color: rgb(var(--accent-color));
 	outline: none;
 	/*text-decoration: underline;*/
 	-webkit-tap-highlight-color: transparent;
@@ -1063,30 +1068,28 @@ body > footer > *,
 body > main > * {
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 40em; /* alternative */
-	max-width: var(--content-width);
+	max-width: var(--content-width,40em);
 	/*outline: 1px dashed red; /* DEBUG */
 }
 
 body > header {
-	/*position: relative;*/
 	position: fixed;
+	position: sticky;
+	/*position: relative;*/
 	top: 0;
 	width: 100%;
 	z-index: 100;
-	/*opacity: 0.999;*/
-	/*overflow: hidden;*/
+	padding-bottom: 0;
 
 	background: inherit;
+}
 
-	/*-webkit-mask-image: linear-gradient(180deg, rgba(0,0,0,1) 0, 90%, rgba(0,0,0,0) 100%);*/
-
-	/*background: red !important;*/
+body > header:hover,
+body > header:focus-within {
+	z-index: 103;
 }
 
 body > header > * {
-	/*position: fixed;*/
-	/*top: var(--gutter-height);*/
 	left: var(--gutter-width);
 	right: var(--gutter-width);
 	height: var(--line-height);
@@ -1095,15 +1098,6 @@ body > header > * {
 	align-items: center;
 	justify-content: space-between;
 	flex-wrap: wrap;
-}
-
-body > header * {
-	/*outline: 1px dashed red;*/
-}
-
-body > header > * > h1 > a {
-	display: inline-block;
-	line-height: 0.5;
 }
 
 body > header h1 {
@@ -1116,71 +1110,19 @@ body > header h1 {
 	font-size: 100%;
 }
 
+body > header h1 > a {
+	display: inline-block;
+	line-height: 0.5;
+}
+
 body > header .description {
 	display: block;
 }
 
-
-
-body > header nav {
-	/*flex-grow: 3;*/
-	/*display: flex;*/
-	/*flex-direction: row;*/
-	/*outline: 1px solid red;*/
-
-}
-
-body > header nav > ul {
-	display: flex;
-	flex-basis: 100%;
-	justify-content: end;
-	/*justify-content: space-between;*/
-	flex-wrap: wrap;
-
-	/*outline: 1px dashed red;*/
-}
-
-body > header nav {
-	/*margin-top: var(--gutter-height);*/
-}
-
-body > header nav > ul > li {
-	display: block;
-	padding: 0 0 0 1rem;
-	/*outline: 1px dashed red;*/
-}
-
-body > header nav > ul > li.has-children:after {
-	content: '⌃';
-	content: '·';
-	display: inline-block;
-	padding-left: 0.5rem;
-
-	/*outline: 1px dashed red;*/
-}
-
-body > header nav > ul > li ~ li {
-	/*display: inline-block;*/
-	/*margin-left: 1rem;*/
-}
-
-body > header nav li > ul {
-	display: none;
-	padding: 0 1rem 1rem;
-	margin-left: -1rem;
-}
-
-body > header nav li:hover ul {
-	position: absolute;
-	display: block;
-	background: rgba(var(--page-color),0.9);
-	backdrop-filter: blur(var(--page-color-blur));
-	/*outline: 1px dotted red;*/
-}
-
 body > main {
 	position: relative;
-	margin-top: calc(var(--gutter-height) + 3*var(--line-height));
+	/*margin-top: calc(2*var(--gutter-height) + 3*var(--line-height));*/
+	margin-top: calc(3*var(--line-height));
 	margin-bottom: calc(100vh + 3*var(--line-height));
 	padding: 0 var(--gutter-width);
 	min-height: 100vh;
@@ -1189,7 +1131,7 @@ body > main {
 	border-bottom: 1px solid transparent; /* to make sure no margin escapes */
 	z-index: 100;
 
-	/*outline: 2px dashed cyan;*/
+	/*background: cyan;*/
 }
 
 body > footer {
@@ -1201,6 +1143,7 @@ body > footer {
 	z-index: 1;
 
 	text-align: center;
+	/*background: red;*/
 }
 
 body > footer > * {
@@ -1210,30 +1153,102 @@ body > footer > * {
 	right: var(--gutter-width);
 }
 
-body > footer .author-card .avatar {
-	max-height: calc(4*var(--line-height));
+
+/*body > footer * {
+	outline: 1px dashed red;
+}*/
+
+/*body > footer .author-card {
+	float: left;
+	width: 45%;
+	margin-right: var(--gutter-width);
+
+	text-align: left;
+}*/
+
+body > footer .author-image {
+	margin-bottom: var(--line-height);
+}
+
+body > footer .author-image img {
+	max-height: calc(3*var(--line-height));
 	border-radius: 50%;
 }
 
-body > footer .social {
-
+body > footer .author-name {
+	padding: 0;
 }
 
 body > footer .copyright {
-	margin-top: var(--gutter-height);
+	clear: both;
+	padding-top: var(--line-height);
 }
 
 
-body > footer nav ul li {
-	display: inline-block;
-	margin: 0 0.5rem;
+
+/*--------------------------------------------------------------
+menu styles
+--------------------------------------------------------------*/
+
+.menu {
+	/*flex-grow: 3;
+	display: flex;
+	flex-direction: row;*/
+	text-align: left;
 }
 
-body > footer nav ul {
-	margin: var(--line-height) 0 0;
-	padding: 0;
-	text-align: center;
+.menu * {
+	/*outline: 1px dashed red;*/
 }
+
+.menu > ul {
+	display: flex;
+	flex-basis: 100%;
+	flex-wrap: wrap;
+	/*padding-top: 0.1rem;*/
+	/*outline: 1px dashed red;*/
+}
+
+.menu > ul > li {
+	display: block;
+	padding: 0 0 0 1rem;
+}
+
+.menu > ul > li:first-child {
+	padding-left: 0;
+}
+
+body > header .menu > ul > li.has-children:after {
+	content: '⌄';
+	display: inline-block; 
+	padding-left: 0.5rem;
+	/*outline: 1px dashed red;*/
+}
+
+body > header .menu li > ul {
+	display: none;
+	padding: 0 1rem 1rem;
+	margin-left: -1rem;
+}
+
+body > header .menu li:hover > ul,
+body > header .menu li:focus-within > ul {
+	position: absolute;
+	display: block;
+	background: rgba(var(--page-color),0.9);
+	backdrop-filter: blur(var(--page-color-blur));
+}
+
+body > header .menu ul {
+	justify-content: end;
+	/*justify-content: space-between;*/
+}
+
+body > footer .menu ul {
+	/*justify-content: space-between;*/
+	justify-content: center;
+}
+
 
 
 /*--------------------------------------------------------------
@@ -1350,10 +1365,10 @@ a, a:visited {
 	vertical-align: baseline;
 
 	background: transparent;
-	color: #00f; /* alternative */
 	color: rgb(var(--hyperlink-color));
 	text-decoration: underline;
 	text-decoration-thickness: 0.5px;
+	text-decoration-color: inherit;
 	/*text-decoration-skip-ink: auto;*/
 
 	outline: none;
@@ -1361,24 +1376,34 @@ a, a:visited {
 
 a:not([href^="http"]),
 a:visited:not([href^="http"]) {
-	text-decoration-style: double;
+	text-decoration-style: dashed;
 }
 
 a[href^="mailto"] {
 	text-decoration-style: solid;
+	text-decoration-color: inherit;
 }
 
-a:not([href]) {
+/*a:not([href]) {
 	text-decoration-style: dashed;
+}*/
+
+.menu a,
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+	color: rgb(var(--text-color));
+	text-decoration: none;
 }
 
+a:focus {
+	text-decoration: underline;
+	text-decoration-style: dotted;
+	text-decoration-thickness: 2px;
+	text-decoration-color: inherit;
+}
+
+a:hover,
+a:focus,
 a:active {
-	text-decoration-style: wavy;
-	text-decoration-skip-ink: none;
-}
-
-a:hover, a:focus, a:active {
-	color: #f00; /* alternative */
 	color: rgb(var(--accent-color));
 	-webkit-tap-highlight-color: transparent;
 
@@ -1386,11 +1411,84 @@ a:hover, a:focus, a:active {
 	transition        : color .3s;
 }
 
-nav a,
-body > header a,
-h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+.cta a {
+	padding: 0.3rem 0.5rem;
+
+	background: rgb(var(--page-color));
+	border: 1.5px solid;
+	border-radius: 2rem;
+	white-space: nowrap;
+}
+
+.cta a:hover,
+.cta a:focus,
+.cta a:active {
+	background: rgb(var(--text-color));
+	border-color: rgb(var(--text-color));
+	color: rgb(var(--page-color));
+}
+
+
+/*--------------------------------------------------------------
+tags styles
+--------------------------------------------------------------*/
+
+.tag {
+	display: inline-block;
+	padding: 0.6em 0.6em 0.5em 0.6em;
+	margin: 0 0.4rem 0.4rem 0;
+
+	background: rgb(var(--page-color));
+	border: 1.5px solid rgb(var(--text-color));
+	border-radius: 2px;
 	color: rgb(var(--text-color));
+	font-weight: bold;
+	letter-spacing: 1px;
+	line-height: 0.5;
 	text-decoration: none;
+
+	cursor: pointer;
+	pointer-events: auto;
+	transition: none;
+
+	-webkit-user-select: none !important;
+	user-select        : none !important;
+}
+
+.tag:first-child {
+	margin-left: 0;
+}
+
+.tag:hover,
+.tag[data-active='true'] {
+	background: rgb(var(--text-color));
+	border-color: rgb(var(--text-color));
+	/*color: rgb(var(--text-color-inverted));*/
+	color: rgb(var(--page-color));
+}
+
+.tag:focus {
+	border-color: rgb(var(--text-color));
+	color: rgb(var(--text-color));
+	text-decoration: underline;
+	text-decoration-style: dotted;
+	text-decoration-thickness: 2px;
+	outline: none;
+	-webkit-tap-highlight-color: transparent;
+}
+
+.tag:hover {
+	color: rgb(var(--page-color));
+}
+
+.tag[data-active='true']:focus {
+	color: rgb(var(--page-color));
+}
+
+.tag:active {
+	background-color: rgb(var(--accent-color));
+	border-color: rgb(var(--accent-color));
+	color: rgb(var(--page-color));
 }
 
 
@@ -1537,10 +1635,13 @@ social sharing menu
 		-webkit-tap-highlight-color: transparent;
 	}
 	.sharing details:not(:hover) summary:focus {
-		text-decoration: solid underline;
+		text-decoration: underline;
+		text-decoration-style: dotted;
+		text-decoration-thickness: 2px;
 	}
 	.sharing details[open] summary::after {
 		content: ':';
+		text-decoration: none;
 	}
 
 .sharing details[open] summary ~ * {
@@ -1585,7 +1686,6 @@ social menu
 
 .social a:before {
 	font-family: var(--font-icons);
-	font-size: 2em;
 }
 
 .social a span {
@@ -1644,7 +1744,7 @@ language selector
 		margin: 0;
 		padding-left: 0.5rem;
 
-		font-weight: bold;
+		/*font-weight: bold;*/
 		text-align: right;
 	}
 
@@ -1712,7 +1812,8 @@ theme toggle, return to top
 
 .gadgets #theme-toggle {
 	position: absolute;
-	top: calc(var(--gutter-width) + var(--gadget-gutter));
+	top: var(--gutter-width);
+	/*top: calc(var(--gutter-width) + var(--gadget-gutter));*/
 
 	cursor: pointer;
 	color: rgba(var(--text-color));
@@ -1756,66 +1857,6 @@ theme toggle, return to top
 		display: inline-block;
 		animation: bounce 2s ease 3;
 	}
-
-
-/*--------------------------------------------------------------
-tags styles
---------------------------------------------------------------*/
-
-.tag {
-	display: inline-block;
-	padding: 0.5em;
-	margin: 0 0.4rem 0.4rem 0;
-
-	background: rgb(var(--page-color));
-	border: 1.5px solid rgb(var(--text-color));
-	border-radius: 2px;
-	color: rgb(var(--text-color));
-	font-weight: bold;
-	letter-spacing: 1px;
-	line-height: 0.5;
-	text-decoration: none;
-
-	cursor: pointer;
-	pointer-events: auto;
-	transition: none;
-
-	-webkit-user-select: none !important;
-	user-select        : none !important;
-}
-
-* > .tag:first-child {
-	margin-left: 0;
-}
-
-.tag:hover,
-.tag[data-active='true'] {
-	background: rgb(var(--text-color));
-	border-color: rgb(var(--text-color));
-	/*color: rgb(var(--text-color-inverted));*/
-	color: rgb(var(--page-color));
-}
-
-.tag:focus {
-	border-color: rgb(var(--text-color));
-	color: rgb(var(--text-color));;
-	outline: none;
-	-webkit-tap-highlight-color: transparent;
-}
-	.tag:focus:not(:hover) {
-		text-decoration: solid underline;
-	}
-
-.tag:hover {
-	color: rgb(var(--page-color));
-}
-
-.tag[data-active='true']:focus {
-	border-color: rgb(var(--text-color));
-	color: rgb(var(--page-color));
-}
-
-.tag::-moz-focus-inner { border: 0; }
 
 
 /*--------------------------------------------------------------
@@ -1962,7 +2003,9 @@ articles-list styles
 }
 
 .articles-list > summary:focus h2 {
-	text-decoration: solid underline;
+	text-decoration: underline;
+	text-decoration-style: dotted;
+	text-decoration-thickness: 2px;
 }
 
 .articles-list > summary h2 {
@@ -2031,7 +2074,9 @@ articles-list styles
 /*.articles-list article > a > * { outline: 1px dashed red; }*/
 
 .articles-list article > a:focus h3 {
-	text-decoration: solid underline;
+	text-decoration: underline;
+	text-decoration-style: dotted;
+	text-decoration-thickness: 2px;
 }
 
 .articles-list article .thumbnail {
@@ -2488,12 +2533,12 @@ single article meta styles
 
 .meta details {
 	padding: calc(var(--gutter-height)/4) calc(var(--gutter-height)/2);
-	border-top: 2px dotted;
+	border-top: 1px dotted;
 	/*outline: 1px dashed red;*/
 	transition: color 0.3s, border 0.3s;
 }
 	.meta details:last-child {
-		border-bottom: 2px dotted;
+		border-bottom: 1px dotted;
 	}
 	.meta details:not([open]) {
 		color: rgba(var(--text-color),.3);
@@ -2523,7 +2568,9 @@ single article meta styles
 		-webkit-tap-highlight-color: transparent;
 	}
 	.meta details:not(:hover) summary:focus {
-		text-decoration: solid underline;
+		text-decoration: underline;
+		text-decoration-style: dotted;
+		text-decoration-thickness: 2px;
 	}
 	.meta details summary::after {
 		display: inline-block;
