--- a/layouts/partials/author-card.html
+++ b/layouts/partials/author-card.html
@@ -1,9 +1,6 @@
-{{ if .Site.Params.Author }}
-<div class="media author-card" itemscope="" itemtype="http://schema.org/Person">
-	{{ partialCached "author-image" . }}
-	<div class="media-body">
-		{{ with .Site.Params.Author.Name }}<h3 class="card-title" itemprop="name">{{ . }}</h3>{{ end }}
-		{{ with .Site.Params.Author.Description }}<p class="card-text" itemprop="description">{{ . }}</p>{{ end }}
-	</div>
+{{ if .Site.Params.Author -}}
+<div class="media author-card h-card" itemprop="author" itemscope itemtype="http://schema.org/Person">
+	{{ with .Site.Params.Author.Name }}<h2 class="fn author-name" itemprop="name">{{ . }}</h2>{{ end }}
+	{{ with .Site.Params.Author.Description }}<p class="author-description" itemprop="description">{{ . }}</p>{{ end }}
 </div>
-{{ end }}
+{{- end }}
