--- a/layouts/partials/author-image.html
+++ b/layouts/partials/author-image.html
@@ -1,7 +1,9 @@
 {{ if .Site.Params.Author.Image -}}
-	{{ with $img := resources.Get .Site.Params.Author.Image }}
-		<img class="avatar" src="{{ (.Fill "200x200").Permalink }}" itemprop="image" alt="">
+<div class="author-image">
+	{{ with $img := resources.Get .Site.Params.Author.Image -}}
+		<img src="{{ (.Fill "200x200").Permalink }}" itemprop="image" alt="">
 	{{- else -}}
-		<img class="avatar" src="{{ .Site.Params.Author.Image | relURL }}" itemprop="image" alt="">
+		<img src="{{ .Site.Params.Author.Image | relURL }}" itemprop="image" alt="">
 	{{- end -}}
-{{- end -}}
+</div>
+{{- end }}
