--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -56,6 +56,9 @@ global CSS variables
 
 	--page-color-transparency: 0.89;
 	--page-color-blur: 2px;
+
+	/* auto-calculated colors */
+	--shadow-color: rgba(var(--text-color),0.2);
 }
 
 
@@ -63,23 +66,6 @@ global CSS variables
 /*--------------------------------------------------------------
 themes
 --------------------------------------------------------------*/
-
-/*
-add https://github.com/hundredrabbits/Themes support
-
-
-    background, Application Background.		      --page-color
-    f_high, Foreground, high-contrast.		      --accent-color
-    f_med, Foreground, medium-contrast.		      --text-color
-    f_low, Foreground, low-contrast.		      low contrast text
-    f_inv, Foreground, for modals and overlays.	  highlight text color
-    b_high, Background, high-contrast.		      none or hightlight bg?
-    b_med, Background, medium-contrast.		      none?
-    b_low, Background, low-contrast.		      shadow color?
-    b_inv, Background, for modals and overlays.	  highlight bg?
-
-
-*/
 
 body, /* default theme */
 body.scheme-light {
@@ -89,8 +75,8 @@ body.scheme-light {
 	--accent-color: 0, 0, 255;
 	--text-color-inverted: 255, 255, 255;
 
-	/* auto-calculated colors */
-	--shadow-color: rgba(var(--text-color),0.2);
+	--blend-mode: multiply;
+	--blend-filter: none;
 }
 
 body.scheme-dark {
@@ -99,6 +85,9 @@ body.scheme-dark {
 	--hyperlink-color: 204, 204, 204;
 	--accent-color: 205, 35, 185;
 	--text-color-inverted: 20, 20, 20;
+
+	--blend-filter: invert(100);
+	--blend-mode: screen;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -108,9 +97,11 @@ body.scheme-dark {
 		--hyperlink-color: 204, 204, 204;
 		--accent-color: 205, 35, 185;
 		--text-color-inverted: 20, 20, 20;
+
+		--blend-filter: invert(100);
+		--blend-mode: screen;
 	}
 }
-
 
 body.theme-peach,
 body.theme-peach.scheme-light {
@@ -124,9 +115,9 @@ body.theme-peach.scheme-light {
 
 body.theme-peach,
 body.theme-peach.scheme-dark {
-	--page-color: 255, 210, 230;
-	--text-color: 0, 0, 0;
-	--hyperlink-color: 0, 0, 0;
+	--page-color: 20, 20, 20;
+	--text-color: 255, 210, 230;
+	--hyperlink-color: 255, 210, 230;
 	--accent-color: 248, 128, 120;
 	--text-color-inverted: 20, 20, 20;
 }
@@ -207,22 +198,14 @@ body.theme-blue {
 }
 
 
-/*blend images to bg*/
+/*--------------------------------------------------------------
+image filters
+--------------------------------------------------------------*/
 
-body.theme-blend .entry-content img,
-.img-blend {
-	mix-blend-mode: multiply;
+img.blend {
+	filter: var(--blend-filter);
+	mix-blend-mode: var(--blend-mode);
 }
-
-@media (prefers-color-scheme: dark) {
-	body.theme-blend:not(.scheme-light) .entry-content img,
-	body:not(.scheme-light) .img-blend {
-		filter: invert(100);
-		mix-blend-mode: screen;
-	}
-}
-
-
 
 
 /*--------------------------------------------------------------
@@ -371,7 +354,7 @@ body,
 
 .font-mono, .font-monospace,
 code, kbd,
-button, input[type=submit], input[type=reset],
+input[type=submit], input[type=reset],
 .menu, .sharing, .languages,
 .tag, .more {
 	--xheight: 0.92;
@@ -384,7 +367,7 @@ pre, input, textarea {
 	font-family: inherit;
 }
 
-button, input[type=submit], input[type=reset],
+input[type=submit], input[type=reset],
 .menu, .sharing, .languages,
 .tag, .more,
 .meta details summary,
@@ -430,7 +413,7 @@ body > footer .copyright {
 article .summary:after,
 .meta summary:after,
 .rating,
-.sl-navigation button,
+.sl-wrapper button,
 abbr:not(:hover):before,
 ins[datetime]:not(:hover):before,
 del[datetime]:not(:hover):before,
@@ -440,6 +423,10 @@ span[title*=' ']:not(:hover):before {
 	font-size: var(--s-2);
 	/*line-height: calc(var(--line-height)/1.2);*/
 	/*line-height: 1.4;*/
+}
+
+.sl-wrapper button {
+	font-size: var(--s-1) !important;
 }
 
 h1 { font-size: var(--s04); }
@@ -912,8 +899,7 @@ input[type="email"] {
 }
 
 input[type="submit"],
-input[type="reset"],
-button {
+input[type="reset"] {
 	display: block;
 	/*margin: 0.5rem auto;*/
 	padding: 0.6rem 0.6rem 0.5rem 0.6rem;
@@ -937,8 +923,7 @@ button {
 }
 
 input[type="submit"]:hover,
-input[type="reset"]:hover,
-button:hover {
+input[type="reset"]:hover {
 	box-shadow: inset 0 2rem 0 var(--shadow-color), 0px 3px 0px 0px var(--shadow-color);
 	color: rgb(var(--text-color));
 	text-decoration: none;
@@ -946,8 +931,7 @@ button:hover {
 }
 
 input[type="submit"]:focus,
-input[type="reset"]:focus,
-button:focus {
+input[type="reset"]:focus {
 	border-top: 3px solid;
 	border-bottom: 1.5px solid;
 	box-shadow: inset 0 2rem 0 var(--shadow-color), 0px 3px 0px 0px var(--shadow-color);
@@ -958,8 +942,7 @@ button:focus {
 }
 
 input[type="submit"]::-moz-focus-inner,
-input[type="reset"]::-moz-focus-inner,
-button::-moz-focus-inner { border: 0; }
+input[type="reset"]::-moz-focus-inner { border: 0; }
 
 input[type=checkbox] {
 	appearance: none;
@@ -1825,8 +1808,8 @@ theme toggle, return to top
 
 	transition: opacity 0.3s, color 0.3s;
 
-	background: rgb(var(--page-color));
-	border-radius: 50%;
+	/*background: rgb(var(--page-color));*/
+	/*border-radius: 50%;*/
 
 	/*outline: 1px dashed red;*/
 }
